- 当地人提现政策文案更新 - 更改标题

--- a/_posts/2016-09-14-当地人提现政策更新 .markdown
+++ b/_posts/2016-09-14-当地人提现政策更新 .markdown
@@ -6,6 +6,7 @@ author:     "你来客服"
 header-img: "img/PostBack.png"
 ---
 
+**当地人提现政策更新如下：**
 1. 当地向导每人每周（每周一到周日）可提现1次，法定节假日不可提现。
 2. 使用**境外银行卡**和 **PAYPAL** 收款的当地人，手续费由当地向导承担。
 3. 以上政策从**2016年9月14日**开始执行。
