当地人新手指南 添加图片

--- a/_posts/2016-01-01-当地人新手指南.markdown
+++ b/_posts/2016-01-01-当地人新手指南.markdown
@@ -17,6 +17,7 @@ header-img: "img/PostBack.png"
 
 ### 如何提现？
 在「我的」页面中，您可以按到您的「余额」，点击「余额」后，您可以选择**支付宝**、**Paypal**、**国内银行卡**和**境外银行卡**四种方式对您的资金进行提现操作。
+![](http://ww4.sinaimg.cn/large/006tNbRwgw1fasu79a5ioj315o112wkt.jpg)
 
 ### 如何获得更多的曝光？
 「你来出境游」平台致力于让所有当地向导在一个公平透明的生态中健康获利，同时我们对能够提供优质服务内容的当地向导提供了更曝光机会，让游客能接触到更优质的服务。
@@ -29,7 +30,8 @@ header-img: "img/PostBack.png"
 * 您的个人主页和服务页面都可以分享到微信朋友圈或微博，以获得更多曝光
 
 ### 如何提供定制服务
-与游客沟通时，可以通过右上角的「快捷订单」，根据游客的需求快速的为游客定制一条订单，方面付款
+与游客沟通时，可以通过右上角的「快捷订单」，根据游客的需求快速的为游客定制一条订单，方便付款，如下图：
+![](http://ww2.sinaimg.cn/large/006tNbRwgw1fasu5imd2lj30ku112whx.jpg)
 
 ### 如何获得评价
 我们建议您在服务完成后提醒游客尽早确认付款，并撰写评价，分享到朋友圈。优质的评价有机会让您「好评当地人」的方式展现在城市中间页，在游客给您评价后，您也可以给游客评价。
