--- a/_posts/2016-01-01-当地人新手指南.markdown
+++ b/_posts/2016-01-01-当地人新手指南.markdown
@@ -9,21 +9,21 @@ header-img: "img/PostBack.png"
 恭喜您通过审核，成为了「你来出境游」当地向导团队中的一员，作为新人，您肯定还有很多疑惑，下面由我来一个一个帮您解答。
 
 ### 游客如何购买服务？
-在「你来出境游」平台中，您发布的服务以及您的个人资料页会被所有游客所见。如果有游客预定了您的服务，并支付了全款费用后，您会收到一条游客预定服务的通知，您可以根据您的档期或其他因素决定是否接单，此时游客支付的资金**由我们作为第三方保障其资金安全**，并且可以在游客无故爽约情况下保障当地人的基本利益。
+在「你来出境游」平台中，您发布的服务以及您的个人主页会被所有游客所见。在有游客预定了您的服务，并支付了全款费用后，您会收到一条游客预定服务的通知，您可以根据您的档期或其他因素决定是否接单，此时游客支付的资金**由我们作为第三方保障其资金安全**，在游客无故爽约情况下同样可以保障您的权益。
 
-在保障服务质量的前提下，当服务结束后，需要游客在平台内**确认服务完成**，之后您就可以看到您在平台中的「余额」中多了这笔服务的款项，您可以通过提现功能将「余额」专至您自己的银行账户中。
+在为游客提供了满意的服务后，需要游客在平台内**确认服务完成**，之后您就可以在「余额」看到这笔款项了，您可以通过**提现**功能将「余额」转至您自己的银行账户中。
 
 > 如果游客没有及时**确认服务完成**，那么在**服务完成7日后**，系统将自动确认付款，届时就可以收到服务款。
 
 ### 如何提现？
-在「我的」页面中，您可以按到您的「余额」，点击「余额」后，您可以选择**支付宝**、**Paypal**、**国内银行卡**和**境外银行卡**四种方式对您的资金进行提现操作。
+在「我的」页面中，您可以看到您的「余额」，点击「余额」后，您可以看到您的账户余额及过往的交易记录，点击下方「提现」按钮后，您可以选择**支付宝**、**Paypal**、**国内银行卡**和**境外银行卡**四种方式对您的资金进行提现操作。
 ![](http://ww4.sinaimg.cn/large/006tNbRwgw1fasu79a5ioj315o112wkt.jpg)
 
 ### 如何获得更多的曝光？
-「你来出境游」平台致力于让所有当地向导在一个公平透明的生态中健康获利，同时我们对能够提供优质服务内容的当地向导提供了更曝光机会，让游客能接触到更优质的服务。
+「你来出境游」平台致力于让所有当地向导在一个公平透明的生态中健康获利，同时我们为能够提供优质服务内容的当地向导提供了更曝光机会，让游客能接触到更优质的服务。
 
 * 提供优质的个人照片及能够体现出个人特色的个人介绍，如果您符合此项标准，将有机会在首页和城市中间页获得推荐
-* 服务能够提现当地人服务的特点，亮点突出，介绍清晰，配图有吸引力且价格合理，将有机会在首页和城市中间页获得推荐展示
+* 服务能够体现当地人服务的特点，亮点突出，介绍清晰，配图有吸引力且价格合理，将有机会在首页和城市中间页获得推荐
 * 通过优质的服务获得了游客优质的评价，将会以「好评当地人」的方式推荐在城市中间页
 * 积极的回复游客咨询，回复率及回复时间会影响您的排名
 * 游客咨询时提供优质的服务，您的「咨询-成单」的转化率也将影响您的排名
@@ -34,6 +34,6 @@ header-img: "img/PostBack.png"
 ![](http://ww2.sinaimg.cn/large/006tNbRwgw1fasu5imd2lj30ku112whx.jpg)
 
 ### 如何获得评价
-我们建议您在服务完成后提醒游客尽早确认付款，并撰写评价，分享到朋友圈。优质的评价有机会让您「好评当地人」的方式展现在城市中间页，在游客给您评价后，您也可以给游客评价。
+我们建议您在服务完成后提醒游客尽早确认付款，并撰写评价，分享到朋友圈。优质的评价有机会让您以「好评当地人」的方式展现在城市中间页，在游客给您评价后，您也可以给游客评价。
 
 任何问题欢迎在「消息」页面找「你来客服」进行咨询。
