--- a/_posts/2016-12-16-关于iOS制作快捷订单多选日期的问题处理.markdown
+++ b/_posts/2016-12-16-关于iOS制作快捷订单多选日期的问题处理.markdown
@@ -6,15 +6,15 @@ author:     "你来客服"
 header-img: "img/PostBack.png"
 ---
 
-### 问题描述：
+#### 问题描述：
 当地人使用iOS（App版本等于小于3.1.2）制作快捷订单时，如果连续选择2017年多个日期，会出现假死的情况。
 
-### 暂时解决办法：
+#### 暂时解决办法：
 每次只选择一个日期，再进来选择另外一个日期。比如要选择2月3号和2月24号，先选择3号->确认->再选择24号->确认。如图：
 ![](http://ww1.sinaimg.cn/large/006tNbRwjw1faspq8bcqkj30ku112769.jpg)
 
 再选择其他日期：
 ![](http://ww1.sinaimg.cn/large/006tNbRwjw1faspqi4qvhj30ku112gnq.jpg)
 
-### 后续解决办法：
+#### 后续解决办法：
 这个 Bug 将在下个版本解决（也就是大于3.1.2版本）。
