--- a/_posts/2016-12-17-当地向导模式上线.markdown
+++ b/_posts/2016-12-17-当地向导模式上线.markdown
@@ -6,7 +6,7 @@ author:     "你来客服"
 header-img: "img/PostBack.png"
 ---
 
-今天打开 App 是不是发现跟之前不一样了？😊
+打开 App 是不是发现跟之前不一样了？😊
 
 最新的版本我们上线了「切换身份」的功能，当地人登录 App 后，默认为 「当地人模式」，我们将大家最长用的 **消息**、**订单**、**服务管理** 等功能前置，可以极大的简化您的操作。
 
