- 修改错别字

--- a/_posts/2016-12-17-当地向导模式上线.markdown
+++ b/_posts/2016-12-17-当地向导模式上线.markdown
@@ -8,7 +8,7 @@ header-img: "img/PostBack.png"
 
 打开 App 是不是发现跟之前不一样了？😊
 
-最新的版本我们上线了「切换身份」的功能，当地人登录 App 后，默认为 「当地人模式」，我们将大家最长用的 **消息**、**订单**、**服务管理** 等功能前置，可以极大的简化您的操作。
+最新的版本我们上线了「切换身份」的功能，当地人登录 App 后，默认为 「当地人模式」，我们将大家最常用的 **消息**、**订单**、**服务管理** 等功能前置，可以极大的简化您的操作。
 
 当然您也可以通过「我的」页面中的，「切换至游客模式」按钮，切换至游客模式，两种模式可以 **随时随地随意切换**。如下图：
 ![](http://ww1.sinaimg.cn/large/006tNbRwjw1fatqz6l5vnj30ku112wgu.jpg)
