--- a/_posts/2016-12-19-关于你来出境游收取技术服务费的公告.markdown
+++ b/_posts/2016-12-19-关于你来出境游收取技术服务费的公告.markdown
@@ -2,7 +2,7 @@
 layout:     post
 title:      "关于你来出境游收取技术服务费的公告"
 date:       2016-12-19
-author:     "Zhuo"
+author:     "你来客服"
 header-img: "img/PostBack.png"
 catalog: no
 ---
@@ -12,7 +12,7 @@ catalog: no
 
 为了在未来能让更多的游客知道你来出境游平台，让大家接到更多订单；继续通过技术手段降低大家沟通成本，提高成单效率。我们将做如下规则调整：  
 
-**从北京时间 2017年01月01日，凌晨 00:00 分起，你来出境游平台将按照订单金额总价 10% 的比例收取技术服务费。**  
+**从北京时间 2017年01月01日，凌晨 00:00 起，你来出境游平台将按照订单金额总价 10% 的比例收取技术服务费。**  
 
 > **注意：以下两种情况不收取技术服务费：**  
 1. 新加入的向导首单不收取技术服务费  
