--- a/_posts/2016-12-20-关于你来出境游收取技术服务费的公告.markdown
+++ b/_posts/2016-12-20-关于你来出境游收取技术服务费的公告.markdown
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "关于你来出境游收取技术服务费的公告"
-date:       2016-12-19
+date:       2016-12-20
 author:     "你来客服"
 header-img: "img/PostBack.png"
 catalog: no
@@ -18,7 +18,7 @@ catalog: no
 1. 新加入的向导首单不收取技术服务费  
 2. 当地向导自带客源在平台上完成的订单不收取技术服务费，自带客源的当地向导在订单支付成功后，自行向资源对接人或你来客服报备  
 
-本次调整规则所收取的**技术服务费**将全部用于产品的研发、资源引入及品牌宣传上，持续为大家提供更高效易用的产品、更多的客源，为大家带来更丰厚的收入。
+本次调整规则所收取的**技术服务费**将全部用于**产品的研发**、**资源引入**及**品牌宣传**上，持续为大家提供更高效易用的产品、更多的客源，为大家带来更丰厚的收入。
 
 2016.12.20  
 你来出境游
