--- a/_posts/2016-12-19-关于你来出境游收取技术服务费的公告.markdown
+++ b/_posts/2016-12-19-关于你来出境游收取技术服务费的公告.markdown
@@ -1,13 +1,14 @@
 ---
 layout:     post
 title:      "关于你来出境游收取技术服务费的公告"
-date:       2016-12-20
+date:       2016-12-19
 author:     "你来客服"
 header-img: "img/PostBack.png"
 catalog: no
 ---
 
-**亲爱的各位同胞：**  
+**亲爱的各向导：**
+  
 在大家的支持与帮助下，你来出境游平台已经与各位度过了将近三年的时光。在这三年里，我们致力于通过技术与运营手段，为大家提供优质的产品体验与稳定的获客渠道。  
 
 为了在未来能让更多的游客知道你来出境游平台，让大家接到更多订单；继续通过技术手段降低大家沟通成本，提高成单效率。我们将做如下规则调整：  
