--- a/_posts/2016-12-19-关于你来出境游收取技术服务费的公告.markdown
+++ b/_posts/2016-12-19-关于你来出境游收取技术服务费的公告.markdown
@@ -7,7 +7,7 @@ header-img: "img/PostBack.png"
 catalog: no
 ---
 
-**亲爱的各向导：**
+**亲爱的各位向导：**
   
 在大家的支持与帮助下，你来出境游平台已经与各位度过了将近三年的时光。在这三年里，我们致力于通过技术与运营手段，为大家提供优质的产品体验与稳定的获客渠道。  
 
