--- a/_posts/2016-12-19-关于你来出境游收取技术服务费的公告.markdown
+++ b/_posts/2016-12-19-关于你来出境游收取技术服务费的公告.markdown
@@ -7,13 +7,13 @@ header-img: "img/PostBack.png"
 catalog: no
 ---
 
-**亲爱的各位向导：**
+**亲爱的当地达人：**
   
-在大家的支持与帮助下，你来出境游平台已经与各位度过了将近三年的时光。在这三年里，我们致力于通过技术与运营手段，为大家提供优质的产品体验与稳定的获客渠道。  
+时光匆匆，在大家的支持与帮助下，你来出境游平台已经与各位度过了将近两年美好的时光。在这两年里，你来出境游一直在努力提高平台的技术及产品，为各位达人带来稳定的获客渠道，为游客带去美好的旅行体验。  
 
-为了在未来能让更多的游客知道你来出境游平台，让大家接到更多订单；继续通过技术手段降低大家沟通成本，提高成单效率。我们将做如下规则调整：  
+着眼于未来，我们需要加强运营，让更多的游客使用你来出境游，让大家接到更多订单；持续完善产品，并提高技术处理能力，降低大家沟通成本，提高成单效率。游客、当地达人、平台三方共赢是我们的目标，因此我们将做如下规则调整：
 
-**从北京时间 2017年01月01日，凌晨 00:00 起，你来出境游平台将按照订单金额总价 10% 的比例收取技术服务费。**  
+**北京时间 2017年01月01日，凌晨 00:00 起，你来出境游平台将按照订单金额总价 10% 的比例收取技术服务费。**在此期间，当地达人如有任何疑问，均可联系**你来客服**。  
 
 > **注意：以下两种情况不收取技术服务费：**  
 1. 新加入的向导首单不收取技术服务费  
