--- a/_posts/2016-12-20-关于你来出境游收取技术服务费的公告.markdown
+++ b/_posts/2016-12-20-关于你来出境游收取技术服务费的公告.markdown
@@ -17,7 +17,7 @@ catalog: no
 
 > **注意：以下两种情况不收取技术服务费：**  
 1. 新加入的向导首单不收取技术服务费  
-2. 当地向导自带客源在平台上完成的订单不收取技术服务费，请在游客支付成功后，自行向资源对接人或你来客服报备  
+2. 当地向导自带客源在平台上完成的订单不收取技术服务费，请在**游客支付成功后**，自行向资源对接人或你来客服报备  
 
 本次调整规则所收取的**技术服务费**将全部用于**产品的研发**、**资源引入**及**品牌宣传**上，持续为大家提供更高效易用的产品、更多的客源，为大家带来更丰厚的收入。
 
