--- a/_posts/2016-12-20-关于你来出境游收取技术服务费的公告.markdown
+++ b/_posts/2016-12-20-关于你来出境游收取技术服务费的公告.markdown
@@ -13,7 +13,7 @@ catalog: no
 
 着眼于未来，我们需要加强运营与服务，让更多的游客使用你来出境游，让大家接到更多订单；持续完善产品，并提高技术处理能力，降低大家沟通成本，提高成单效率。游客、当地达人、平台三方共赢是我们的目标，因此我们将做如下规则调整：
 
-**从北京时间 2017 年 01 月 01 日，凌晨 00:00 起，你来出境游平台将按照订单金额总价 10% 的比例收取技术服务费。**在此期间，当地达人如有任何疑问，均可联系**你来客服**。  
+**从北京时间 2017 年 01 月 01 日，凌晨 00:00 起产生的订单，你来出境游平台将按照订单金额总价 10% 的比例收取技术服务费。**在此期间，当地达人如有任何疑问，均可联系**你来客服**。  
 
 > **注意：以下两种情况不收取技术服务费：**  
 1. 新加入的向导首单不收取技术服务费  
