--- a/_posts/2016-12-21-3.2Indexrecommend.markdown
+++ b/_posts/2016-12-21-3.2Indexrecommend.markdown
@@ -13,13 +13,13 @@ Hi，因为你的出色服务，我们将在**一月中旬新版本**的 App 上
 被推荐至首页后，你将会在**新版本**的这个区域展现给游客，如下图：
 ![](https://file.nilai.com/3.2index2.png)
 
-此位置会展示 5-12 名优秀向导，排名规则是随机的。同时我们在新首页推荐优秀向导时，采用了新的**封面照**的尺寸比例， [**点击这里**](www.nilai.com) ，上传您的**封面照**，具体流程及规范如下：  
+此位置会展示 5-12 名优秀向导，排名规则是随机的。同时我们在新首页推荐的优秀向导采用了新的**封面照**的尺寸比例，上传新**封面照**的具体流程及规范如下：  
 
 1. 请先将 App 更新至最新版（ 3.1.5 ） [**点击这里**](www.nilai.com)  **更新至最新版**。
 2. 上传照片时，按照线框示范，剪裁照片，保证上传的照片为半身照（腰部以上）
 3. 照片内容清晰
 4. 亲切的表情是加分项
 
-[**点击这里**](www.nilai.com) 上传**封面照**。
+[**点击这里**](www.nilai.com) 开始上传**封面照**。
 
-请于 **1月10日** 之前，按照新的规范，上传您的封面照，有问题，请联系**你来客服**。
+为了在新版本上线时能更好的展现给游客，请于 **1月10日** 之前，按照新的规范，上传您的封面照，有问题，请联系**你来客服**。
