--- a/_posts/2016-12-21-3.2Indexrecommend.markdown
+++ b/_posts/2016-12-21-3.2Indexrecommend.markdown
@@ -15,7 +15,7 @@ Hi，因为你的出色服务，我们将在**一月中旬新版本**的 App 上
 
 此位置会展示 5-12 名优秀向导，排名规则是随机的。同时我们在新首页推荐的优秀向导采用了新的**封面照**的尺寸比例，上传新**封面照**的具体流程及规范如下：  
 
-1. 请先将 App 更新至最新版（ 3.1.5 ） [**点击这里**](www.nilai.com)  **更新至最新版**。
+1. 请先将 App 更新至最新版（ 3.1.5 ），iOS 用户 [**点击这里**](www.nilai.com)  **更新至最新版**，Android 用户 [**点击这里**](www.nilai.com)  **更新至最新版**。
 2. 上传照片时，按照线框示范，剪裁照片，保证上传的照片为半身照（腰部以上）
 3. 照片内容清晰
 4. 亲切的表情是加分项
