--- a/_posts/2016-12-21-3.2newtype.markdown
+++ b/_posts/2016-12-21-3.2newtype.markdown
@@ -8,12 +8,12 @@ header-img: "img/PostBack.png"
 
 今天我们上线了最新的 3.1.5 版本（iOS 和 Android 版本同步更新），此版本最大的变化是：  
 
-### 「徒步伴游」服务品类更名为「特色体验」 
+### 徒步伴游 服务品类更名为：特色体验 
 出于提高「徒步伴有」服务类目的订单量及吸引力的目的，我们做出了此次调整，调整后的「特色体验」服务类目，比之前所涵盖的服务类型更广，发布服务时填写的内容更灵活。
 
 新的「特色体验」服务品类，有别于单纯的用车服务与一日游／多日游线路型服务产品，它可以更好的体现当地人服务特色，覆盖更多的用户需求，它可以是**由向导陪同的一次购物之旅**，可以是**当地手工作坊的一次深度体验**，也可以是**潜水/射击/等需要专业陪同才有更好体验的特色游玩项目**，它涵盖了更多的当地服务主题，如：艺术、时尚、 娱乐、运动、养生、户外、美食、高科技、生活、文化等。
 
-### 「当地玩法」服务品类更名为「当地线路」
+### 当地玩法服务品类更名为：当地线路
 调整后的「当地线路」服务品类不仅仅可以发布一日游的行程，还可以发布多日游的行程了。
 
 ### 新的服务详情页
