--- a/_posts/2016-12-21-3.2newtype.markdown
+++ b/_posts/2016-12-21-3.2newtype.markdown
@@ -8,18 +8,18 @@ header-img: "img/PostBack.png"
 
 今天我们上线了最新的 3.1.5 版本（iOS 和 Android 版本同步更新），此版本最大的变化是：  
 
-### 徒步伴游 服务品类更名为：特色体验 
+#### 徒步伴游 服务品类更名为：特色体验 
 出于提高「徒步伴有」服务类目的订单量及吸引力的目的，我们做出了此次调整，调整后的「特色体验」服务类目，比之前所涵盖的服务类型更广，发布服务时填写的内容更灵活。
 
 新的「特色体验」服务品类，有别于单纯的用车服务与一日游／多日游线路型服务产品，它可以更好的体现当地人服务特色，覆盖更多的用户需求，它可以是**由向导陪同的一次购物之旅**，可以是**当地手工作坊的一次深度体验**，也可以是**潜水/射击/等需要专业陪同才有更好体验的特色游玩项目**，它涵盖了更多的当地服务主题，如：艺术、时尚、 娱乐、运动、养生、户外、美食、高科技、生活、文化等。
 
-### 当地玩法服务品类更名为：当地线路
+#### 当地玩法服务品类更名为：当地线路
 调整后的「当地线路」服务品类不仅仅可以发布一日游的行程，还可以发布多日游的行程了。
 
-### 新的服务详情页
+#### 新的服务详情页
 根据新的服务品类，我们重新设计了服务详情页。
 
-### 为什么要发布新的服务
+#### 为什么要发布新的服务
 我们计划在一月中旬发布新的 3.2 版本，3.2 版本重新设计了游客端的首页及城市中间页，如下图。
 
 **3.2 版本首页**  
@@ -28,6 +28,6 @@ header-img: "img/PostBack.png"
 这个版本在首页和城市中间页增加了「特色体验」和「当地线路」品类服务的展示，相较于目前的版本，为优秀的向导及服务提供了更多的展示位。只要您的服务足够优质，将 100% 得到
 推荐。  
 
-### 如何发布新品类的服务
+#### 如何发布新品类的服务
 1. 请先将 App 更新至最新版（ 3.1.5 ），iOS 用户 [**点击这里**](https://www.nilai.com)  **更新至最新版**，Android 用户 [**点击这里**](https://www.nilai.com)  **更新至最新版**。
 2.  [**点击这里**](https://www.nilai.com)  进入发布服务页面，你也可以在「服务管理」页面中，点击右上角发布新的服务。
