--- a/_posts/2016-12-21-3.2redesign.markdown
+++ b/_posts/2016-12-21-3.2redesign.markdown
@@ -17,7 +17,6 @@ tag:
 
 ### 目标
 * 证明更多样化的服务，及对特色服务更好的露出能够提升转化率，提高平台客单价。
-*  尽可能的降低开发、资源、运营成本结论。
 * 尽可能能赶上春节假期的出行潮，更好的产出结果，确定
 
 ### 不应考虑的问题
@@ -126,7 +125,7 @@ tag:
 
 ##### 特色体验
 * 筛选条件：艺术、时尚、 娱乐、运动、养生、户外、美食、高科技、生活、文化分类
-* 列表字段：图片、标题、目的地（列表无城市属性时）、价格、主题、最多接待人数
+* 列表字段：图片、标题、目的地（列表无城市属性时）、价格、主题、最多接待人数	
 
 ##### 线路玩法
 * 筛选条件：一日游、多日游
@@ -140,4 +139,13 @@ tag:
 
 ### 首页及城市中间页面优化
 * 添加四个服务类目的入口
-* 向导、特色体验、线路玩法、私房发现内容外露
+* 向导、特色体验、线路玩法、私房发现内容外露  
+
+#### 首页各展示位规则
+* 首页所有展示位内容均由后台配置，没有配置则不展示。
+* **推荐位中的内容排名不固定，随机展示。**
+
+#### 城市中间页各展示位规则
+* **超赞当地人：**无配置则不展示此模块，内容排名不固定，随机展示。。
+* **特色体验、当地线路：**3新+3好评，内容排名不固定，随机展示。
+* **私房发现：**取获得推荐的最新的6个，内容排名不固定，随机展示。
