--- a/_posts/2016-12-21-3.2redesign.markdown
+++ b/_posts/2016-12-21-3.2redesign.markdown
@@ -17,6 +17,7 @@ tag:
 
 ### 目标
 * 证明更多样化的服务，及对特色服务更好的露出能够提升转化率，提高平台客单价。
+* 尽可能的降低开发、资源、运营成本结论。
 * 尽可能能赶上春节假期的出行潮，更好的产出结果，确定
 
 ### 不应考虑的问题
@@ -136,6 +137,7 @@ tag:
 * **当地用车：**全部、接送机、包车
 * **特色体验：**全部、艺术、时尚、 娱乐、运动、养生、户外、美食、高科技、生活、文化
 * **线路玩法：**全部、一日线路、多日线路
+
 
 ### 首页及城市中间页面优化
 * 添加四个服务类目的入口
