添加发布服务提示按及示例文案

--- a/_posts/2016-12-21-3.2redesign.markdown
+++ b/_posts/2016-12-21-3.2redesign.markdown
@@ -103,6 +103,30 @@ tag:
 	* 是否提供儿童座椅
 	* 是否提供轮椅
 	* 服务包含
+   
+### 发布服务的提示文案及示例文案  
+**提示文案** 是只输入框上方的提示文案，**示例文案** 是指输入框上方提示文案中链接部分点击后弹出的浮层内文案。
+
+#### 服务标题
+* **提示文案：**游客更喜欢简洁、清晰、易懂的标题，并被可预期的效果所吸引。
+* **示例文案：**
+    * **标题：**简洁、清晰、易懂、有吸引力的标题
+    * **正文：**标题需要尽可能的突出你的个人特长、爱好等特质的同时，说清楚服务的内容，比如「资深吃货带你吃吃喝喝环岛游」、「跟着摄影师寻找巴黎最浪漫的城市景观」。
+    
+#### 体验/行程亮点
+* **提示文案：**总结出你所发布服务最吸引人的几个地方，游客会最先看到你填写的亮点，所以它非常重要。
+* **示例文案：**
+    * **标题：**游客会最先看到你的服务亮点
+    * **正文：**总结出你所发布服务最吸引人的几个地方，比如「乘坐全亚洲可以租到的最豪华游艇」、「午餐是在船上现捕捞的海鲜烧烤」「品尝罗马最有代表性的提拉米苏」「摄影师全程跟拍」。
+
+#### 详细介绍
+* **提示文案：**服务的具体介绍，让游客对你的服务能有一个更明确的认识。
+* **示例文案：**
+    * **标题：**服务的具体介绍，让游客对你的服务能有一个更明确的认识
+    * **正文：**比如：跟我出海吧！乘坐全亚洲可以租到最豪华的游艇，体验一下整个海岛都是你的感觉！我们的豪华游艇正常容量是24人，最佳体验是15人以下，所以，把你所有的朋友都带来吧！如果您喜欢潜水，那就让船长带您去捕捞新鲜的海鲜，体验一下浮潜的美妙。当然，如果您热爱海洋的话，那就再好不过了，整个大海都将是你的。午餐也可以拿捕捞上来的海鲜做烧烤！豪华邮轮上的 Barbecue 感觉一定很不错 ~
+
+#### 特别提醒
+* **提示文案：**填写如：服务限制、温馨提示、风俗禁忌或者是需要再次向游客强调的费用所含／不含项目的具体说明。
 
 ### 新服务列表页  
 新增一个聚合所有类目服务的服务列表页，此页面承载了展现、筛选、排序所有所有已上线城市、及服务的功能。此列表页的入口会放置于首页及城市中间页。新的服务列表页替换原有城市中间页服务入口进入的旧服务列表页。
