更新文章日期和链接

--- a/_posts/2016-12-31-3.2rel.markdown
+++ b/_posts/2016-12-31-3.2rel.markdown
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "发布新服务获得更多曝光机会"
-date:       2016-12-21
+date:       2017-01-01
 author:     "你来客服"
 header-img: "img/PostBack.png"
 ---
@@ -29,4 +29,4 @@ header-img: "img/PostBack.png"
 
 ### 如何发布新品类的服务
 1. 请先将 App 更新至最新版（ 3.2.0 ）。
-2.  [**点击这里**](https://www.nilai.com)  进入发布服务页面，选择「特色体验」发布服务。你也可以在「服务管理」页面中，点击右上角发进入发布服务页面。
+2.  [**点击这里**](nilai://service/add)  进入发布服务页面，选择「特色体验」发布服务。你也可以在「服务管理」页面中，点击右上角发进入发布服务页面。
