修改版本号

--- a/_posts/2017-01-10-3.2Indexrecommend.markdown
+++ b/_posts/2017-01-10-3.2Indexrecommend.markdown
@@ -18,7 +18,7 @@ Hi，因为你的出色服务，在**一月中旬新版本**的 App 上线时，
 **封面照示例：**  
 ![](https://file.nilai.com/example.png)
 
-1. 请先将 App 更新至最新版，版本号： `3.2.1`。
+1. 请先将 App 更新至最新版，版本号： `iOS 3.2.0以上，安卓 3.2.1以上`。
 2. 上传照片时，按照线框示范，剪裁照片，保证上传的照片为半身照（腰部以上）
 3. 照片内容清晰
 4. 亲切的表情是加分项
