--- a/_posts/2017-01-18-audit.markdown
+++ b/_posts/2017-01-18-audit.markdown
@@ -1,87 +1,28 @@
 ---
 layout:     post
-title:      "服务审核标准"
-date:       2017-01-18
+title:      "恭喜！您将获得官方推荐！"
+date:       2017-01-10
 author:     "你来客服"
 header-img: "img/PostBack.png"
 ---
 
-在你来出境游平台，每个当地人发布／修改的服务，须由**服务审核部门**审核通过后方可上线。  
+Hi，因为你的出色服务，在**一月中旬新版本**的 App 上线时，您将获得在**新的首页**或**新的城市中间页**的推荐位，让更多的游客能够接触到你优质的服务。
 
-审核的总体目标是：**协助大家完善服务内容描述，尽最大可能减少游客与当地人后续的沟通成本，提高服务的吸引力，促进成交。**  
+一月中旬上线的新版 App 中，我们重新设计了游客端的**首页**及**城市中间页**，我们希望能有更多的优秀向导及服务展现给游客。
 
-**所以我们希望您发布的服务：**
-* 服务价格合理
-* 服务描述清晰、无歧义
-* 服务特点突出，能体现出当地人自身或服务本身的亮点
-* 配图质量优秀，有足够的视觉吸引力。
+您将会在**新版本**的这个区域展现给游客，如下图：
+![](https://file.nilai.com/3.2index2.png)
 
-### 各类别服务的定义与界限
-目前，你来出境游平台中的服务分为三个类别：
-* 用车服务：接送服务、包车服务
-* 特色体验服务
-* 当地线路服务：一日游、多日游（近期开放上线）  
-每个服务类别有它各自的定义与界限，**不符合各个服务类别定义的服务将不予通过**。
+此位置会展示 5-12 名优秀向导，排名规则是随机的。但是，我们在新首页推荐优秀向导时采用了新的**封面照**的尺寸比例，请遵循下方流程及规范上传新的**封面照**：  
 
-#### 用车服务
-**用车服务**类别用于发布单纯的单程接送或单日包车服务，该服务类别主体是车辆本身，以单次／单日为定价单位，需要清晰的描述清楚车辆信息，以及用车服务相关的价格信息，例如：儿童座椅，夜间收费等服务细节。  
+**封面照示例：**  
+![](https://file.nilai.com/example.png)
 
-#### 特色体验服务
-**特色体验**有别于单纯的**用车服务**与**一日游**线路型服务产品，该服务类别的主体是当地的某个单一项目，如：射击、潜水，以单人／单次为定价单位。  
+1. 请先将 App 更新至最新版，版本号： `iOS 3.2.0以上，安卓 3.2.1以上`。
+2. 上传照片时，按照线框示范，剪裁照片，保证上传的照片为半身照（腰部以上）
+3. 照片内容清晰
+4. 亲切的表情是加分项
 
-它可以更好的体现当地人服务特色，覆盖更多的用户需求，它可以是 **由向导陪同的一次购物之旅** ，可以是 **当地手工作坊的一次深度体验** ，也可以是 **潜水/射击/等需要专业陪同才有更好体验的特色游玩项目** ，它涵盖了更多的当地服务主题，如： 购物、摄影、夜生活、时尚娱乐、户外运动、当地口味、文化艺术、高科技、音乐与电影、手工艺、展览市集、自然探索、医疗养生。
+[**点击这里**](nilai://upload?oper=1) 开始上传**封面照**。
 
-#### 当地线路服务
-**当地线路**有别于单纯的按天定价的**用车服务**，也有别于**特色体验**类型服务的**单一项目型服务**，它是由当地人定制的一条**包含多个景点、服务项目的线路型服务**，它目前以「单日」为定价单位*（后续针对多日行程会有调整）*。
-
-### 服务价格审核标准
-服务价格是影响成交率最关键的因素，你来出境游实行**当地人自由定价**的定价策略，并从2017年01月01日起，开始收取 10% 的**技术服务费**[查看详情](https://jinzhuonilai.github.io/2016/12/20/关于你来出境游收取技术服务费的公告/)。所以，在保证服务价格与您的服务价值相匹配的同时，尽可能的让您的价格更有竞争力。  
-
-#### 以下情况，不予通过：
-1. 对于影响当地价格体系的**恶意低价**
-2. **服务价格过高**，与服务价值差别较大
- 
-### 服务照片规范
-在读图时代，上传一张好看的服务照片是吸引到游客眼球最简单的方法，同时，服务照片也能更好的让游客了解到您的服务内容，对服务产生足够预期并最终促成交易。
-
-#### 以下情况，不予通过：
-1. 用车服务，**车辆照片**少于3张
-2. 特色体验服务，**服务照片**少于3张
-3. 竖版照片
-4. 含有政治、色情内容的
-5. 分辨率小于 800*600
-6. **拼图**或在**照片中添加文字说明**
-
-### 服务标题规范
-游客更喜欢**简洁**、**清晰**、**易懂**的标题，并被可预期的内容所吸引。标题在尽可能的突出你的**个人特长**、**爱好等特质**的同时，描述清楚服务的内容，比如：
-* 资深吃货带你吃吃喝喝环岛游
-* 跟着摄影师寻找巴黎最浪漫的城市景观  
-
-#### 以下情况，不予通过：
-1. 标题与服务内容不符
-2. 出现电话、微信、外链等内容
-3. 描述不清晰过于简单的标题
-
-### 体验／行程亮点规范
-在发布**特色体验**与**当地线路**两类服务时，需要填写服务亮点。服务亮点是除**标题**与**照片**以外，游客最先看到的内容之一，所以它非常重要，你可以在这里总结出你所发布服务最吸引人的几个地方，比如：
-* 乘坐全亚洲可以租到的最豪华游艇
-* 午餐是在船上现捕捞的海鲜烧烤
-* 品尝罗马最有代表性的提拉米苏
-* 摄影师全程跟拍
-
-#### 以下情况，不予通过：
-1. 亮点与服务内容不符
-2. 出现电话、微信、外链等内容
-
-### 详细介绍审核规则
-详细介绍用于填写服务的具体内容，让游客对你的服务能有一个更详细的认识。  
-
-#### 以下情况，不予通过：
-1. 介绍于服务内容不符
-2. 出现电话、微信、外链等内容  
-
-### 对于之前已经发布服务的处理
-新发布的服务，我们将严格按照新的服务审核标准进行处理。而对于之前已经发布的服务，最近针对新的服务标准，我们已经进行了一轮梳理，有相当一部分不符合规范的服务被要求调整内容或下线，请大家于**2017年03月01日**前按照新的服务审核标准重新调整服务内容，过期没有进行调整的服务我们将逐步下线。  
-
-### 总结
-严格审核服务的目的不是为了限制，而是为了与大家一起，完善服务内容，保证整个平台的服务质量，提高服务对游客的吸引力，减少大家的与游客的沟通成本，提高成单率。针对服务审核标准有任何为题，都可以联系你来客服进行反馈。
+为了在新版本上线时能更好的展现给游客，请于 **1月15日** 之前，按照新的规范，上传您的封面照，有问题，请联系**你来客服**。
