--- a/_posts/2017-01-18-audit.markdown
+++ b/_posts/2017-01-18-audit.markdown
@@ -34,6 +34,8 @@ header-img: "img/PostBack.png"
 #### 当地线路服务
 **当地线路**有别于单纯的按天定价的**用车服务**，也有别于**特色体验**类型服务的**单一项目型服务**，它是由当地人定制的一条**包含多个景点、服务项目的线路型服务**，它目前以「单日」为定价单位*（后续针对多日行程会有调整）*。
 
+### 服务价格审核标准
+服务价格是影响成交率最关键的因素，你来出境游实行**当地人自由定价**的定价策略，并从2017年01月01日起，开始收取 10% 的**技术服务费**[查看详情](https://jinzhuonilai.github.io/2016/12/20/关于你来出境游收取技术服务费的公告/)。所以，在保证服务价格与您的服务价值相匹配的同时，尽可能的让您的价格更有竞争力。  
 
 #### 以下情况，不予通过：
 1. 对于影响当地价格体系的**恶意低价**
@@ -50,36 +52,3 @@ header-img: "img/PostBack.png"
 5. 分辨率小于 800*600
 6. **拼图**或在**照片中添加文字说明**
 
-### 服务标题规范
-游客更喜欢**简洁**、**清晰**、**易懂**的标题，并被可预期的内容所吸引。标题在尽可能的突出你的**个人特长**、**爱好等特质**的同时，描述清楚服务的内容，比如：
-* 资深吃货带你吃吃喝喝环岛游
-* 跟着摄影师寻找巴黎最浪漫的城市景观  
-
-#### 以下情况，不予通过：
-1. 标题与服务内容不符
-2. 出现电话、微信、外链等内容
-3. 描述不清晰过于简单的标题
-
-### 体验／行程亮点规范
-在发布**特色体验**与**当地线路**两类服务时，需要填写服务亮点。服务亮点是除**标题**与**照片**以外，游客最先看到的内容之一，所以它非常重要，你可以在这里总结出你所发布服务最吸引人的几个地方，比如：
-* 乘坐全亚洲可以租到的最豪华游艇
-* 午餐是在船上现捕捞的海鲜烧烤
-* 品尝罗马最有代表性的提拉米苏
-* 摄影师全程跟拍
-
-#### 以下情况，不予通过：
-1. 亮点与服务内容不符
-2. 出现电话、微信、外链等内容
-
-### 详细介绍审核规则
-详细介绍用于填写服务的具体内容，让游客对你的服务能有一个更详细的认识。  
-
-#### 以下情况，不予通过：
-1. 介绍于服务内容不符
-2. 出现电话、微信、外链等内容  
-
-### 对于之前已经发布服务的处理
-新发布的服务，我们将严格按照新的服务审核标准进行处理。而对于之前已经发布的服务，最近针对新的服务标准，我们已经进行了一轮梳理，有相当一部分不符合规范的服务被要求调整内容或下线，请大家于**2017年03月01日**前按照新的服务审核标准重新调整服务内容，过期没有进行调整的服务我们将逐步下线。  
-
-### 总结
-严格审核服务的目的不是为了限制，而是为了与大家一起，完善服务内容，保证整个平台的服务质量，提高服务对游客的吸引力，减少大家的与游客的沟通成本，提高成单率。针对服务审核标准有任何为题，都可以联系你来客服进行反馈。
