--- a/_posts/2017-01-18-audit.markdown
+++ b/_posts/2017-01-18-audit.markdown
@@ -44,3 +44,36 @@ header-img: "img/PostBack.png"
 ### 服务照片规范
 在读图时代，上传一张好看的服务照片是吸引到游客眼球最简单的方法，同时，服务照片也能更好的让游客了解到您的服务内容，对服务产生足够预期并最终促成交易。
 
+### 服务标题规范
+游客更喜欢**简洁**、**清晰**、**易懂**的标题，并被可预期的内容所吸引。标题在尽可能的突出你的**个人特长**、**爱好等特质**的同时，描述清楚服务的内容，比如：
+* 资深吃货带你吃吃喝喝环岛游
+* 跟着摄影师寻找巴黎最浪漫的城市景观  
+
+#### 以下情况，不予通过：
+1. 标题与服务内容不符
+2. 出现电话、微信、外链等内容
+3. 描述不清晰过于简单的标题
+
+### 体验／行程亮点规范
+在发布**特色体验**与**当地线路**两类服务时，需要填写服务亮点。服务亮点是除**标题**与**照片**以外，游客最先看到的内容之一，所以它非常重要，你可以在这里总结出你所发布服务最吸引人的几个地方，比如：
+* 乘坐全亚洲可以租到的最豪华游艇
+* 午餐是在船上现捕捞的海鲜烧烤
+* 品尝罗马最有代表性的提拉米苏
+* 摄影师全程跟拍
+
+#### 以下情况，不予通过：
+1. 亮点与服务内容不符
+2. 出现电话、微信、外链等内容
+
+### 详细介绍审核规则
+详细介绍用于填写服务的具体内容，让游客对你的服务能有一个更详细的认识。  
+
+#### 以下情况，不予通过：
+1. 介绍于服务内容不符
+2. 出现电话、微信、外链等内容  
+
+### 对于之前已经发布服务的处理
+新发布的服务，我们将严格按照新的服务审核标准进行处理。而对于之前已经发布的服务，最近针对新的服务标准，我们已经进行了一轮梳理，有相当一部分不符合规范的服务被要求调整内容或下线，请大家于**2017年03月01日**前按照新的服务审核标准重新调整服务内容，过期没有进行调整的服务我们将逐步下线。  
+
+### 总结
+严格审核服务的目的不是为了限制，而是为了与大家一起，完善服务内容，保证整个平台的服务质量，提高服务对游客的吸引力，减少大家的与游客的沟通成本，提高成单率。针对服务审核标准有任何为题，都可以联系你来客服进行反馈。
