--- a/_posts/2017-03-21-dg.markdown
+++ b/_posts/2017-03-21-dg.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "服务审核标准"
+title:      "代购后台表单字段整理"
 date:       2017-03-21
 author:     "你来客服"
 header-img: "img/PostBack.png"
